--- a/litRest/litRest.csproj
+++ b/litRest/litRest.csproj
@@ -47,6 +47,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="cocina.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="cocina.Designer.cs">
+      <DependentUpon>cocina.cs</DependentUpon>
+    </Compile>
     <Compile Include="control.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -91,6 +97,9 @@
     <Compile Include="user.Designer.cs">
       <DependentUpon>user.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="cocina.resx">
+      <DependentUpon>cocina.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="control.resx">
       <DependentUpon>control.cs</DependentUpon>
     </EmbeddedResource>
@@ -197,6 +206,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\reload.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\hold.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\tick.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
